# mcp

./: .env.docker  .env.example  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: build_hook.py  download-docs.py  download-ocsf-schemas.py
src/tenzir_mcp/: __init__.py  docs.py  server.py
src/tenzir_mcp/data/: __init__.py
src/tenzir_mcp/data/ocsf/: 1.0.0.json  1.1.0.json  1.2.0.json  1.3.0.json  1.4.0.json  __init__.py
tests/: __init__.py  test_server.py
